[tool.poetry]
name = "DisparityTokenFucker"
version = "1.1"
description = "The best free Token Fucker out there"
authors = ["asxlvm"]
license = "None"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
requests = "^2.26.0"
rich = "^10.7.0"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
