[tool.poetry]
name = "DisparityTokenFucker"
version = "2.0"
description = "The best free Token Fucker out there"
authors = ["asxlvm"]
license = "None"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
requests = "^2.26.0"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
